Refactor navbar to TailwindCSS

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= javascript_pack_tag    'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <header>
+    <header class="sticky top-0 bg-white">
       <%= render 'shared/nav' %>
     </header>
     <main>
