Refactor NavItemComponent to support button display

--- a/app/components/nav_item_component.html.erb
+++ b/app/components/nav_item_component.html.erb
@@ -1,3 +1,3 @@
 <li class="<%= style %>">
-  <%= link_to @name, @path, class: 'p-2' %>
+  <%= link_to @name, @path, class: link_style, target: @target %>
 </li>
