Refactor single news page side to NewsSideItemComponent

--- a/app/components/news_thumbnail_component.html.erb
+++ b/app/components/news_thumbnail_component.html.erb
@@ -1,7 +1,9 @@
 <div class="<%= classes %>">
   <%= image_tag thumbnail_url(@size), class: 'max-w-full w-full' %>
-  <span class="datetime absolute top-4 right-4 p-4 bg-white text-center text-red-500">
-    <%= created_at.day %><br />
-    <%= created_at.strftime('%b') %>
-  </span>
+  <% if calendar_visible? %>
+    <time datetime="<%= created_at.iso8601 %>" class="absolute top-4 right-4 p-4 bg-white text-center text-red-500">
+      <%= created_at.day %><br />
+      <%= created_at.strftime('%b') %>
+    </time>
+  <% end %>
 </div>
