--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -14,20 +14,7 @@
   <aside class="basis-1/3">
     <h1 class="mb-4 font-semibold text-2xl"><%= t('.latest_news') %></h1>
     <div class="flex flex-col">
-    <% @latest.each do |news| %>
-      <div class="flex my-2">
-        <div class="w-1/5">
-          <%= image_tag news.thumbnail_url(:small_square) %>
-        </div>
-        <div class="flex-1">
-          <h2 class="mb-1 font-semibold text-lg text-red-500 hover:text-red-700"><%= link_to news.title, news %></h2>
-          <span>
-            <i class="fa fa-calendar mr-2"></i>
-          <%= l news.created_at, format: :short %>
-          </span>
-        </div>
-      </div>
-    <% end %>
+      <%= render NewsSideItemComponent.with_collection(@latest) %>
     </div>
   </aside>
 </section>
