--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,11 +1,10 @@
-<nav id="main-menu" class="h-20 flex flex-row px-3 py-1">
-  <div class="mr-4">
-    <%= link_to root_path do %>
-      <%= image_tag current_site.logo_url, class: 'min-h-full' %>
-    <% end %>
-  </div>
-  <div class="flex flex-row grow">
-    <ul class="flex flex-row grow items-center">
+<nav id="main-menu" class="flex flex-wrap items-center justify-between px-4 py-2">
+  <%= link_to root_path, class: 'inline-block mr-4' do %>
+    <%= image_tag current_site.logo_url, class: 'min-h-full' %>
+  <% end %>
+  <button class="px-3 py-1 border border-gray-300 rounded lg:hidden" type="button"><i class="fa fa-bars text-lg" aria-hidden="true"></i></button>
+  <div class="hidden grow basis-full lg:block lg:flex lg:basis-auto lg:items-center">
+    <ul class="flex flex-col lg:flex-row">
       <% unless cfp_only? %>
         <%= render NavItemComponent.new(name: t('.home'), path: root_path) %>
         <%= render NavItemComponent.new(name: t('.news'), path: news_index_path) %>
@@ -18,7 +17,7 @@
       <% end %>
       <%= render NavItemComponent.new(name: t('.code_of_conduct'), path: code_of_conduct_path) %>
     </ul>
-    <ul class="flex flex-row items-center">
+    <ul class="flex flex-col ml-auto lg:flex-row">
       <%= render LanguageSwitchButtonComponent.new(current_locale: current_locale) %>
       <% if current_site.streaming_enabled? %>
         <% if current_site.streaming_track_1_url.present? %>
