Add mobile mode for news section in index

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,7 +1,7 @@
 <% title t('.title') %>
 <% breadcrumb :news_index %>
 <section id="news">
-  <div class="container mx-auto">
+  <div class="container mx-auto space-y-16">
     <%= render NewsListItemComponent.with_collection(@news) %>
   </div>
 </section>
