--- a/app/components/news_list_item_component.html.erb
+++ b/app/components/news_list_item_component.html.erb
@@ -1,5 +1,5 @@
-<article class="flex my-8 after:conent-['']">
-  <%= render NewsThumbnailComponent.new(news: @news, classes: 'mr-6 w-1/3') %>
+<article class="flex flex-col lg:flex-row after:conent-['']">
+  <%= render NewsThumbnailComponent.new(news: @news, classes: 'mb-4 lg:mb-0 lg:mr-6 lg:w-1/3') %>
   <div class="flex-1">
     <h1 class="font-semibold text-3xl text-red-500"><%= link_to @news.title, @news %></h1>
     <hr class="my-4">
