--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
   <body>
-    <header class="sticky top-0 bg-white">
+    <header class="sticky top-0 bg-white z-50">
       <%= render 'shared/nav' %>
     </header>
     <main>
