--- a/app/views/pages/index/_news.html.erb
+++ b/app/views/pages/index/_news.html.erb
@@ -1,8 +1,8 @@
-<section id="news" class="my-16">
+<section id="news" class="mx-4 my-16">
   <div class="container mx-auto text-center">
     <%= render HeadingComponent.new(text: t('.heading')) %>
   </div>
-  <div class="container mx-auto">
+  <div class="container mx-auto space-y-16">
     <%= render NewsListItemComponent.with_collection(@news) %>
   </div>
 </section>
