Add mobile mode for partnet section in index

--- a/app/views/pages/index/_partner.html.erb
+++ b/app/views/pages/index/_partner.html.erb
@@ -1,8 +1,8 @@
-<section id="ticket" class="my-16">
+<section id="ticket" class="my-16 mx-4">
   <div class="container mx-auto text-center">
     <%= render HeadingComponent.new(text: t('.heading')) %>
   </div>
-  <div class="grid grid-cols-6 container mx-auto place-items-center">
+  <div class="space-y-4 lg:grid lg:grid-cols-6 container mx-auto place-items-center">
     <%= render PartnerLogoComponent.with_collection(@partners_and_sponsors) %>
   </div>
 </section>
