--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -3,18 +3,20 @@
 <% set_meta_tags og: { image: { _: @news.thumbnail_url(:medium), width: 770, height: 420}, type: 'article' } %>
 <% banner @news.thumbnail_url(:large) %>
 <% breadcrumb :news, @news %>
-<section id="news" class="container mt-8 mx-auto flex">
-  <article class="basis-2/3 mr-8">
-    <%= render NewsThumbnailComponent.new(news: @news) %>
-    <h1 class="mt-4 font-semibold text-3xl text-red-500"><%= @news.title %></h1>
-    <div class="mt-2">
-      <%= sanitize @news.content %>
-    </div>
-  </article>
-  <aside class="basis-1/3">
-    <h1 class="mb-4 font-semibold text-2xl"><%= t('.latest_news') %></h1>
-    <div class="flex flex-col">
-      <%= render NewsSideItemComponent.with_collection(@latest) %>
-    </div>
-  </aside>
+<section id="news" class="container my-8 mx-auto">
+  <div class="flex flex-col lg:flex-row mx-4">
+    <article class="lg:basis-2/3 lg:mr-8">
+      <%= render NewsThumbnailComponent.new(news: @news) %>
+      <h1 class="mt-4 font-semibold text-3xl text-red-500"><%= @news.title %></h1>
+      <div class="mt-2">
+        <%= sanitize @news.content %>
+      </div>
+    </article>
+    <aside class="mt-8 lg:mt-0 lg:basis-1/3">
+      <h1 class="mb-4 font-semibold text-2xl"><%= t('.latest_news') %></h1>
+      <div class="flex flex-col">
+        <%= render NewsSideItemComponent.with_collection(@latest) %>
+      </div>
+    </aside>
+  </div>
 </section>
