Fix partner logo size in index

--- a/app/components/partner_logo_component.html.erb
+++ b/app/components/partner_logo_component.html.erb
@@ -1,1 +1,1 @@
-<%= link_to image_tag(logo_url(:v1)), @partner.url, target: '_blank', class: 'w-40 max-w-full' %>
+<%= link_to image_tag(logo_url(:v1), class: 'max-w-full'), @partner.url, target: '_blank', class: 'inline-block w-40' %>
