Add mobile mode for speaker page

--- a/app/views/speakers/index.html.erb
+++ b/app/views/speakers/index.html.erb
@@ -5,7 +5,9 @@
   <header class="text-center">
     <%= render HeadingComponent.new(text: t('.speakers')) %>
   </header>
-  <div class="grid grid-cols-5 container mx-auto">
-    <%= render SpeakerListItemComponent.with_collection(@speakers) %>
+  <div class="container mx-auto">
+    <div class="mx-4 lg:mx-0 lg:grid lg:grid-cols-5">
+      <%= render SpeakerListItemComponent.with_collection(@speakers) %>
+    </div>
   </div>
 </section>
