--- a/app/components/partner_logo_component.html.erb
+++ b/app/components/partner_logo_component.html.erb
@@ -1,1 +1,1 @@
-<%= link_to image_tag(logo_url(:v1), class: 'max-w-full'), @partner.url, target: '_blank', class: 'inline-block w-40' %>
+<%= link_to image_tag(logo_url(:v1), class: 'max-w-full'), @partner.url, target: '_blank', class: 'inline-block w-3/4 lg:w-40' %>
