Add mobile mode for sponsor page

--- a/app/components/partner_group_component.html.erb
+++ b/app/components/partner_group_component.html.erb
@@ -1,6 +1,6 @@
 <section class="my-8">
   <h1 class="px-4 py-2 bg-red-500 text-white"><%= name %></h1>
-  <div>
+  <div class="mx-4 lg:mx-auto">
     <%= render PartnerItemComponent.with_collection(items) %>
   </div>
 </section>
