Add mobile mode for coc page

--- a/app/views/pages/coc.en.html.erb
+++ b/app/views/pages/coc.en.html.erb
@@ -1,4 +1,4 @@
-<section id="coc" class="container mx-auto my-8">
+<section id="coc" class="container mx-auto my-8 px-4">
   <article>
     <header>
       <h1 class="my-4 font-semibold text-3xl">Taipei Game Developers Forum <span class="text-red-500">Code of Conduct</span></h1>
