--- a/app/views/pages/coc.zh-TW.html.erb
+++ b/app/views/pages/coc.zh-TW.html.erb
@@ -1,4 +1,4 @@
-<section id="coc" class="container mx-auto my-8">
+<section id="coc" class="container mx-auto my-8 px-4">
   <article>
     <header>
       <h1 class="my-4 font-semibold text-3xl">台北遊戲開發者論壇<span class="text-red-500">活動守則</span></h1>
