--- a/app/views/indie_spaces/index.html.erb
+++ b/app/views/indie_spaces/index.html.erb
@@ -1,13 +1,11 @@
 <% content_for :disable_breadcrumb, true %>
 <%= render SliderComponent.new(id: 'slider', sliders: @sliders) %>
-<div class="container mx-auto mt-5 mb-4">
-  <div class="mx-4 lg:mx-auto">
-    <%= sanitize current_site.indie_space_description %>
-  </div>
+<div class="container px-4 mx-auto mt-5 mb-4">
+  <%= sanitize current_site.indie_space_description %>
 </div>
 <section id="indie-space">
-  <div class="container mx-auto mt-5 mb-4">
-    <div class="mx-4 space-y-4 lg:space-y-0 lg:mx-auto lg:grid lg:gap-4 lg:grid-cols-3">
+  <div class="container px-4 mx-auto mt-5 mb-4">
+    <div class="space-y-4 lg:space-y-0 lg:mx-auto lg:grid lg:gap-4 lg:grid-cols-3">
       <%= render GameComponent.with_collection(@games) %>
     </div>
   </div>
