--- a/app/views/speakers/show.html.erb
+++ b/app/views/speakers/show.html.erb
@@ -2,8 +2,8 @@
 <% description truncate(strip_tags(@speaker.description), length: 150) %>
 <% set_meta_tags og: { image: { _: @speaker.avatar_url(:v1_large), width: 370, height: 370}, type: 'profile' } %>
 <% breadcrumb :speaker, @speaker %>
-<section id="speaker" class="container mx-auto my-8">
-  <div class="flex flex-col lg:flex-row mx-4 lg:mx-0">
+<section id="speaker" class="container px-4 mx-auto my-8">
+  <div class="flex flex-col lg:flex-row lg:mx-0">
     <div class="lg:w-1/4 lg:mr-8">
       <%= image_tag @speaker.avatar_url(:v1_large), class: 'min-w-full max-w-full' %>
     </div>
@@ -17,39 +17,37 @@
   </div>
 </section>
 <section id="sessions" class="my-16 py-4 bg-red-500 text-white">
-  <div class="container mx-auto">
-    <div class="mx-4 lg:mx-0">
-      <h1 class="my-4 font-semibold text-3xl"><%= t('.sessions_by', speaker: @speaker.name) %></h1>
-      <hr class="mb-6" />
-      <% @speaker.agendas.each do |agenda| %>
-        <article>
-          <h1 class="my-2 font-semibold text-xl"><%= agenda.subject %></h1>
-          <div>
-            <i class="fa fa-clock-o"></i>
-            <% if agenda.begin_at.present? && agenda.time.present? %>
-              <%= "#{agenda.time.day.label} - #{agenda.begin_at} - #{agenda.end_at}" %>
-            <% else %>
-              <%= agenda.time&.name || 'TBA' %>
+  <div class="container px-4 mx-auto">
+    <h1 class="my-4 font-semibold text-3xl"><%= t('.sessions_by', speaker: @speaker.name) %></h1>
+    <hr class="mb-6" />
+    <% @speaker.agendas.each do |agenda| %>
+      <article>
+        <h1 class="my-2 font-semibold text-xl"><%= agenda.subject %></h1>
+        <div>
+          <i class="fa fa-clock-o"></i>
+          <% if agenda.begin_at.present? && agenda.time.present? %>
+            <%= "#{agenda.time.day.label} - #{agenda.begin_at} - #{agenda.end_at}" %>
+          <% else %>
+            <%= agenda.time&.name || 'TBA' %>
+          <% end %>
+        </div>
+        <div>
+          <% if agenda.language.present? %>
+            <span><%= t('.language') %>
+            <span><%= t(".lang.#{agenda.language.downcase}") %>
+          <% end %>
+          <% if agenda.translated_type.present? && agenda.translated_language.present? %>
+            <span><%= t(".#{agenda.translated_type}", to: t(".lang.#{agenda.translated_language.downcase}")) %>
+          <% else %>
+            <% if agenda.translated_language.present? %>
+              <span>to <%= t(".lang.#{agenda.translated_language.downcase}") %>
             <% end %>
-          </div>
-          <div>
-            <% if agenda.language.present? %>
-              <span><%= t('.language') %>
-              <span><%= t(".lang.#{agenda.language.downcase}") %>
-            <% end %>
-            <% if agenda.translated_type.present? && agenda.translated_language.present? %>
-              <span><%= t(".#{agenda.translated_type}", to: t(".lang.#{agenda.translated_language.downcase}")) %>
-            <% else %>
-              <% if agenda.translated_language.present? %>
-                <span>to <%= t(".lang.#{agenda.translated_language.downcase}") %>
-              <% end %>
-            <% end %>
-          </div>
-          <div class="my-4 space-y-4">
-            <%= sanitize agenda.description %>
-          </div>
-        </article>
-      <% end %>
-    </div>
+          <% end %>
+        </div>
+        <div class="my-4 space-y-4">
+          <%= sanitize agenda.description %>
+        </div>
+      </article>
+    <% end %>
   </div>
 </section>
