Fix speacker list no spacing in mobile mode

--- a/app/views/speakers/index.html.erb
+++ b/app/views/speakers/index.html.erb
@@ -6,7 +6,7 @@
     <%= render HeadingComponent.new(text: t('.speakers')) %>
   </header>
   <div class="container px-4 mx-auto">
-    <div class="lg:mx-0 lg:grid lg:grid-cols-5">
+    <div class="space-y-4 lg:space-y-0 lg:mx-0 lg:grid lg:grid-cols-5">
       <%= render SpeakerListItemComponent.with_collection(@speakers) %>
     </div>
   </div>
