Add spacing to about section in index

--- a/app/views/pages/index/_about.html.erb
+++ b/app/views/pages/index/_about.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div>
     <%= image_tag current_site.figure_url, class: 'w-full' %>
-    <div class="container mx-auto my-8">
+    <div class="container px-4 mx-auto my-8">
       <%= sanitize current_site.description || t('site_introduce') %>
     </div>
   </div>
