--- a/app/views/layouts/admin_login.html.slim
+++ b/app/views/layouts/admin_login.html.slim
@@ -3,8 +3,8 @@ html
     title TGDF
     = csrf_meta_tags
 
-    = stylesheet_pack_tag    'admin', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_pack_tag 'admin', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag 'admin', 'data-turbolinks-track': 'reload'
 
   body.c-app.flex-row.align-items-center
     = yield
