--- a/app/components/block_component.html.erb
+++ b/app/components/block_component.html.erb
@@ -1,18 +1,16 @@
-<section class="block <%= component_type %>-block">
-  <div class="container mt-5 mb-4">
-    <div class="col-12">
-      <% if twitch_live? %>
-        <iframe
-          id="twitch-embed"
-          class="border-0"
-          src="https://player.twitch.tv/?channel=<%= strip_tags @block.content %>&parent=<%= request.host %>"
-          height="480"
-          width="100%"
-          allowfullscreen>
-        </iframe>
-      <% else %>
-        <%= sanitize @block.content %>
-      <% end %>
+<section class="container my-5 px-4 mx-auto block <%= component_type %>-block">
+  <% if twitch_live? %>
+    <iframe
+      id="twitch-embed"
+      class="border-0"
+      src="https://player.twitch.tv/?channel=<%= strip_tags @block.content %>&parent=<%= request.host %>"
+      height="480"
+      width="100%"
+      allowfullscreen>
+    </iframe>
+  <% else %>
+    <div class="prose max-w-none">
+      <%= sanitize @block.content %>
     </div>
-  </div>
+  <% end %>
 </section>
