--- a/app/views/indie_spaces/index.html.erb
+++ b/app/views/indie_spaces/index.html.erb
@@ -1,7 +1,9 @@
 <% content_for :disable_breadcrumb, true %>
 <%= render SliderComponent.new(id: 'slider', sliders: @sliders) %>
 <div class="container px-4 mx-auto mt-5 mb-4">
-  <%= sanitize current_site.indie_space_description %>
+  <article class="prose max-w-none">
+    <%= sanitize current_site.indie_space_description %>
+  </article>
 </div>
 <section id="indie-space">
   <div class="container px-4 mx-auto mt-5 mb-4">
