--- a/app/views/agendas/_agenda.html.erb
+++ b/app/views/agendas/_agenda.html.erb
@@ -1,4 +1,4 @@
-<article class="space-y-1 mb-2">
+<article class="border-t border-gray-200 lg:border-0 first:border-0 pt-4 space-y-1 mb-2">
   <h1><%= link_to agenda.subject, agenda.speakers.first, class: 'text-red-500 font-semibold' %></h1>
   <p><%= agenda_speaker_links(agenda.speakers) %></p>
   <p>
