Add swiper as slider display

--- a/app/components/slider_component.html.erb
+++ b/app/components/slider_component.html.erb
@@ -1,8 +1,8 @@
-<section id="<%= @id %>" class="carousel slide" data-ride="carousel" data-interval="5000">
-  <div class="carousel-inner">
+<section id="<%= @id %>" class="swiper-container" data-controller="carousel" data-carousel-options-value='{"lazy": true, "loop": true, "autoplay": {"delay": 5000, "disableOnInteraction": false}}'>
+  <div class="swiper-wrapper">
     <%- if @sliders.empty? %>
-      <div class="carousel-item active">
-        <%= image_tag 'sliders/slide_1.jpg', class: 'd-block w-100' %>
+      <div class="swiper-slide">
+        <%= image_tag 'sliders/slide_1.jpg', class: 'd-block w-100 swiper-lazy' %>
       </div>
     <% end %>
     <%= render SliderItemComponent.with_collection(@sliders) %>
