--- a/app/components/slider_item_component.html.erb
+++ b/app/components/slider_item_component.html.erb
@@ -1,3 +1,3 @@
 <div class="<%= classes %>" data-interval="<%= @slider.interval %>">
-  <%== image_tag @slider.image_url(:large), class: 'd-block w-100' %>
+  <%== image_tag @slider.image_url(:large), class: 'd-block w-100 swiper-lazy' %>
 </div>
