Add missing swiper class

--- a/app/components/slider_component.html.erb
+++ b/app/components/slider_component.html.erb
@@ -1,4 +1,4 @@
-<section id="<%= @id %>" class="swiper-container" data-controller="carousel" data-carousel-options-value='{"lazy": true, "loop": true, "autoplay": {"delay": 5000, "disableOnInteraction": false}}'>
+<section id="<%= @id %>" class="swiper swiper-container" data-controller="carousel" data-carousel-options-value='{"lazy": true, "loop": true, "autoplay": {"delay": 5000, "disableOnInteraction": false}}'>
   <div class="swiper-wrapper">
     <%- if @sliders.empty? %>
       <div class="swiper-slide">
