Setup fragment cache for index page

--- a/app/components/partner_item_component.html.erb
+++ b/app/components/partner_item_component.html.erb
@@ -1,3 +1,4 @@
+<% cache @item do %>
 <article class="flex flex-col lg:flex-row my-4 p-6 border border-gray-300 rounded">
   <div class="mb-4 lg:mb-0 lg:mr-4 lg:w-1/4 text-center">
     <%= link_to image_tag(logo_url(:v1)), url, target: '_blank', class: 'inline-block w-full' %>
@@ -9,3 +10,4 @@
     <%= simple_format @item.description %>
   </div>
 </article>
+<% end %>
