Add word breaks to prevent overflow

--- a/app/components/block_component.html.erb
+++ b/app/components/block_component.html.erb
@@ -9,7 +9,7 @@
       allowfullscreen>
     </iframe>
   <% else %>
-    <div class="prose max-w-none">
+    <div class="prose max-w-none break-words">
       <%= sanitize @block.content %>
     </div>
   <% end %>
