--- a/app/components/slider_component.html.erb
+++ b/app/components/slider_component.html.erb
@@ -1,6 +1,6 @@
 <section id="<%= @id %>" class="swiper swiper-container" data-controller="carousel" data-carousel-options-value='{"lazy": true, "loop": true, "autoplay": {"delay": 5000, "disableOnInteraction": false}}'>
   <div class="swiper-wrapper">
-    <%- if @sliders.empty? %>
+    <%- unless @sliders.present? %>
       <div class="swiper-slide">
         <%= image_tag 'sliders/slide_1.jpg', class: 'd-block w-100 swiper-lazy' %>
       </div>
