Closed #481, configure og:image with slider for index/indie_space/night_market

--- a/app/views/night_market/index.html.erb
+++ b/app/views/night_market/index.html.erb
@@ -1,3 +1,4 @@
+<% set_meta_tags og: { image: @sliders.map { |slider| slider.image_url(:large) } } %>
 <% content_for :disable_breadcrumb, true %>
 <%= render SliderComponent.new(id: 'slider', sliders: @sliders) %>
 <%= render BlockComponent.with_collection(@blocks) %>
