--- a/app/views/indie_spaces/index.html.erb
+++ b/app/views/indie_spaces/index.html.erb
@@ -1,3 +1,4 @@
+<% set_meta_tags og: { image: @sliders.map { |slider| slider.image_url(:large) } } %>
 <% content_for :disable_breadcrumb, true %>
 <%= render SliderComponent.new(id: 'slider', sliders: @sliders) %>
 <div class="container px-4 mx-auto mt-5 mb-4">
