--- a/app/components/plans_component.html.erb
+++ b/app/components/plans_component.html.erb
@@ -1,10 +1,10 @@
 <section id="ticket" class="my-16">
   <div class="container mx-auto text-center">
-    <%= render HeadingComponent.new(text: t('.heading')) %>
+    <%= render HeadingComponent.new(text: t(".#{section_name}")) %>
   </div>
   <div class="py-16 bg-red-500 text-white">
     <div class="container mx-auto lg:grid lg:grid-cols-3 space-y-4 lg:space-y-0 justify-items-stretch">
-      <%= render StreamingTrackComponent.with_collection([1, 2, 3], site: current_site) %>
+      <%= render section_content %>
     </div>
   </div>
 </section>
