--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,11 +4,7 @@
 <% else %>
   <%= render SliderComponent.new(id: 'slider', sliders: @sliders) %>
   <%= render 'pages/index/about' %>
-  <% if current_site.streaming_enabled? %>
-    <%= render 'pages/index/streaming' %>
-  <% else %>
-    <%= render 'pages/index/ticket' %>
-  <% end %>
+  <%= render PlansComponent.new(site: current_site) %>
   <%= render 'pages/index/news' if @news.exists? %>
   <%= render 'pages/index/partner' if Sponsor.exists? || Partner.exists? %>
 <% end %>
