Add abstract Plan model

--- a/app/components/plans_component.html.erb
+++ b/app/components/plans_component.html.erb
@@ -5,6 +5,7 @@
   <div class="py-16 bg-red-500 text-white">
     <div class="container mx-auto lg:grid lg:grid-cols-3 space-y-4 lg:space-y-0 justify-items-stretch">
       <%= render section_content %>
+      <%= content if Flipper.enabled?(:preview) %>
     </div>
   </div>
 </section>
